--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,6 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     database: mysql
-    hibernate.ddl-auto: create
+    hibernate.ddl-auto: update
 
 #    show-sql = sqp문을 terminal에 보여줌
